src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_RecordType__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account RecordType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation__c</fullName>
        <label>Affiliation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Delivery_Survey_Sent_Date__c</fullName>
        <label>Client Delivery Survey Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <inlineHelpText>Found in the Affiliation details in Rally Central</inlineHelpText>
        <label>Client ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__CES__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contact Email Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MAR__c</fullName>
        <label>Mailing Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Mailing Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MAV__c</fullName>
        <label>Mailing Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MRDI__c</fullName>
        <label>Mailing Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MTZ__c</fullName>
        <label>Mailing Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__OAR__c</fullName>
        <label>Other Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__OAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Other Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__OAV__c</fullName>
        <label>Other Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__ORDI__c</fullName>
        <label>Other Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__OTZ__c</fullName>
        <label>Other Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_History_Overview__c</fullName>
        <label>Contact History Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_Role__c</fullName>
        <formula>Owner.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_By_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth_Text__c</fullName>
        <description>Text field to hold the date of birth sent over from the LiveAgent pre-chat form. Necessary because of a salesforce bug with handling dates through the LiveAgent API</description>
        <inlineHelpText>Text field to hold the date of birth sent over from the LiveAgent pre-chat form.</inlineHelpText>
        <label>Date Of Birth (Text Field)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fire_Client_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fire Client Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_for_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if a chat user is inappropriate or not authorized, and needs to be evaluated by security. If approved by security, the users IP address may be blocked.</description>
        <inlineHelpText>Check this box if a chat user is inappropriate and needs to be evaluated by security.</inlineHelpText>
        <label>Flag for Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementation_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Implementation Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_No_Reply_Sent__c</fullName>
        <label>Last No Reply Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Support_Survey_Date__c</fullName>
        <label>Last Support Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <description>Member ID as found in Rally Central User Manager under Partner User ID</description>
        <inlineHelpText>Member ID as found in Rally Central User Manager under Partner User ID</inlineHelpText>
        <label>Member ID</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Newsletters__c</fullName>
        <description>Used to track which newsletters the contact receives from Marketing.</description>
        <label>Newsletters</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Health with Benefits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Match__c</fullName>
        <formula>IF( 

ISBLANK(Affiliation__c), &apos;N/A&apos;,

IF( 

AND( 

OR( 
CONTAINS(Affiliation__c, &apos;uhc&apos;), 
CONTAINS(Affiliation__c, &apos;optum&apos;)), 
Partner_lookup__r.Name == &apos;Optum&apos;), &apos;Match&apos;, 

IF( 

AND( 

OR( 
CONTAINS(Affiliation__c, &apos;unknown&apos;), 
CONTAINS(Affiliation__c, &apos;Unknown&apos;),
CONTAINS(Affiliation__c, &apos;UNKNOWN&apos;)),
Partner_lookup__r.Name == &apos;Optum&apos;), &apos;N/A&apos;, 

IF( 

AND( 
CONTAINS(Affiliation__c, &apos;bcbs&apos;), 
Partner_lookup__r.Name == &apos;BCBS South Carolina&apos;), &apos;Match&apos;,

IF( 

AND( 

OR( 
CONTAINS(Affiliation__c, &apos;unknown&apos;), 
CONTAINS(Affiliation__c, &apos;Unknown&apos;),
CONTAINS(Affiliation__c, &apos;UNKNOWN&apos;)),
Partner_lookup__r.Name == &apos;BCBS South Carolina&apos;), &apos;N/A&apos;, 

IF( 

AND( 
CONTAINS(Affiliation__c, &apos;excellus&apos;), 
Partner_lookup__r.Name == &apos;Excellus&apos;), &apos;Match&apos;, 

IF( 

AND( 

OR( 
CONTAINS(Affiliation__c, &apos;unknown&apos;), 
CONTAINS(Affiliation__c, &apos;Unknown&apos;),
CONTAINS(Affiliation__c, &apos;UNKNOWN&apos;)),
Partner_lookup__r.Name == &apos;Excellus&apos;), &apos;N/A&apos;, 

IF( 

AND( 
CONTAINS(Affiliation__c, &apos;univera&apos;), 
Partner_lookup__r.Name == &apos;Univera&apos;), &apos;Match&apos;, 

IF( 

AND( 

OR( 
CONTAINS(Affiliation__c, &apos;unknown&apos;), 
CONTAINS(Affiliation__c, &apos;Unknown&apos;),
CONTAINS(Affiliation__c, &apos;UNKNOWN&apos;)),
Partner_lookup__r.Name == &apos;Univera&apos;), &apos;N/A&apos;, 

IF( 

AND( 
CONTAINS(Affiliation__c, &apos;mercer&apos;), 
Partner_lookup__r.Name == &apos;Mercer&apos;), &apos;Match&apos;, 

IF( 

AND( 

OR( 
CONTAINS(Affiliation__c, &apos;unknown&apos;), 
CONTAINS(Affiliation__c, &apos;Unknown&apos;),
CONTAINS(Affiliation__c, &apos;UNKNOWN&apos;)),
Partner_lookup__r.Name == &apos;Mercer&apos;), &apos;N/A&apos;, 

IF( 

AND( 
CONTAINS(Affiliation__c, &apos;rally&apos;), 
Partner_lookup__r.Name == &apos;Rally Health&apos;), &apos;Match&apos;, 

IF( 

AND( 

OR( 
CONTAINS(Affiliation__c, &apos;unknown&apos;), 
CONTAINS(Affiliation__c, &apos;Unknown&apos;),
CONTAINS(Affiliation__c, &apos;UNKNOWN&apos;)),
Partner_lookup__r.Name == &apos;Rally Health&apos;), &apos;N/A&apos;, 

IF(

AND( 
CONTAINS(Affiliation__c, &apos;great_west_life&apos;), 
Partner_lookup__r.Name == &apos;Great West Life&apos;), &apos;Match&apos;,

IF( 

AND( 

OR( 
CONTAINS(Affiliation__c, &apos;unknown&apos;), 
CONTAINS(Affiliation__c, &apos;Unknown&apos;),
CONTAINS(Affiliation__c, &apos;UNKNOWN&apos;)),
Partner_lookup__r.Name == &apos;Great West Life&apos;), &apos;N/A&apos;, 

IF( 

AND(

OR( 
CONTAINS(Affiliation__c, &apos;none&apos;), 
CONTAINS(Affiliation__c, &apos;None&apos;),
CONTAINS(Affiliation__c, &apos;NONE&apos;),
CONTAINS(Affiliation__c, &apos;unknown&apos;), 
CONTAINS(Affiliation__c, &apos;Unknown&apos;),
CONTAINS(Affiliation__c, &apos;UNKNOWN&apos;)),
Partner_lookup__r.Name == &apos;Unknown&apos;), &apos;Match&apos;,

&apos;Mismatch&apos;)
)))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Match</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Savers</fullName>
                </value>
                <value>
                    <fullName>BCBS South Carolina</fullName>
                </value>
                <value>
                    <fullName>Excellus</fullName>
                </value>
                <value>
                    <fullName>Great West Life</fullName>
                </value>
                <value>
                    <fullName>Health Alliance Medical Plans</fullName>
                </value>
                <value>
                    <fullName>Mercer</fullName>
                </value>
                <value>
                    <fullName>Military Wellness Initiative</fullName>
                </value>
                <value>
                    <fullName>Optum</fullName>
                </value>
                <value>
                    <fullName>Rally Health</fullName>
                </value>
                <value>
                    <fullName>Rally Marketplace</fullName>
                </value>
                <value>
                    <fullName>Univera</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Partner__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PersonId__c</fullName>
        <label>PersonId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query_Phone__c</fullName>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Query Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rally_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Rally ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rally_UID__c</fullName>
        <externalId>true</externalId>
        <label>Rally UID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rally_User_Name__c</fullName>
        <label>Rally User Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Review__c</fullName>
        <description>If chat user is flagged for review, the agent will be prompted to select a reason.</description>
        <label>Reason for Review</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Flag_for_Review__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inappropriate language</fullName>
                </value>
                <value>
                    <fullName>Contact not authorized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_Status_formula__c</fullName>
        <formula>IF( ISPICKVAL(Relationship__c, &apos;Positive&apos;), IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;green&quot;),
IF( ISPICKVAL(Relationship__c, &apos;Detractor&apos;), IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;red&quot;),
IF( ISPICKVAL(Relationship__c, &apos;Positive&apos;), IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;red&quot;),&apos;&apos;
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Detractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Thought_Leadership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Thought Leadership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Webinar_Participant__c</fullName>
        <description>Include contact in webinar events</description>
        <label>Webinar Participant</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Health Plan</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>assistant_email__c</fullName>
        <label>assistant email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>other_e_mail__c</fullName>
        <label>other e-mail</label>
        <type>Email</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Contacts_for_Client_Delivery_Survey</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Fire_Client_Survey__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>startsWith</operation>
            <value>Mayo Clinic</value>
        </filters>
        <filters>
            <field>Implementation_Contact__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Contacts for Client Delivery Survey</label>
        <sharedTo>
            <role>Implementation_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>